frontend/test/should_pass/computations_decl_use_recursive_computations.grg
rule t : (int)
{
	modify {
		def var res:int;
		eval {
			(yield res) = number(3);
		}
		return(res);
	}
}

procedure number(var x:int) : (int)
{
	if(x<=1) {
		return(1);
	} else {
	    def var res:int;
		(res) = number(x - 1);
		return(1 + res);
	}
}
