frontend/test/should_fail/computations_return_early_termination2.grg
var ::glob:int;

procedure one() : (int)
{
	def var x:int = 42;
	return(x);
	def var y:int = 42;
	return(y);
}
